fix: avoid CORS redirect when downloading evidence
